# secmem-alloc

./: CHANGELOG.md  COPYING  Cargo.toml  README.j2  README.md  build.rs  justfile  rustfmt.toml
.github/workflows/: audit.yml  check.yml  codecov.yml
benches/: bench_zeroizers.rs
src/: allocator_api.rs  boxed.rs  internals.rs  lib.rs  macros.rs  sec_alloc.rs  util.rs  zeroize.rs  zeroizing_alloc.rs
src/internals/: mem.rs  mod.rs  zeroize.rs  zeroize_asm_c_impl_ermsb.c
src/internals/mem/: miri.rs  unix.rs  windows.rs
src/internals/zeroize/: asm_x86_64.rs  system.rs  volatile_write.rs
src/zeroize/: mod.rs  tests.rs
tests/: zeroizing_global_alloc.rs
