[package]
name = "secmem-alloc"
version = "0.2.2"
authors = ["niluxv <niluxv.opensource.C-h2ty6xl@yandex.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Custom allocators for secret memory"
readme = "README.md"
categories = ["no-std", "memory-management", "cryptography"]
keywords = ["allocator", "secure", "memory"]
repository = "https://github.com/niluxv/secmem-alloc"
include = ["src/**/*", "tests", "benches", "COPYING", "LICENSE.*", "README.md", "build.rs"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["dep:thiserror", "allocator-api2/std", "winapi/std"]
nightly_allocator_api = ["allocator-api2/nightly"]
nightly_core_intrinsics = []
# even though stabilised, still necessary for avx512
nightly_stdsimd = []
# enables strict provenance lints and uses strict provenance methods from std
# instead of those from `sptr` (for inherent methods only)
nightly_strict_provenance = []
nightly = [
    "nightly_allocator_api",
    "nightly_core_intrinsics",
    "nightly_stdsimd",
    "nightly_strict_provenance",
]
# required features to run tests; additional features enable more tests
dev = ["std"]

[dependencies]
allocator-api2 = { version = "0.2", default-features = false }
cfg-if = "1.0"
libc = "0.2"
mirai-annotations = "1.12"
sptr = "0.3"
thiserror = { version = "1.0", optional = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["mm", "param"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["impl-default", "memoryapi", "sysinfoapi"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_zeroizers"
harness = false

[profile.release]
codegen-units = 1

[profile.bench]
codegen-units = 1
