[package]
name = "secmem-alloc"
version = "0.4.0"
authors = ["niluxv <niluxv.opensource.C-h2ty6xl@yandex.com>"]
license = "MIT OR Apache-2.0"
description = "Custom allocators for secret memory"
readme = "README.md"
categories = ["no-std", "memory-management", "cryptography"]
keywords = ["allocator", "secure", "memory"]
repository = "https://github.com/niluxv/secmem-alloc"
include = ["src/**/*", "tests", "benches", "COPYING", "LICENSE.*", "README.md", "build.rs"]
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["allocator-api2/std", "thiserror/std"]
nightly_allocator_api = ["allocator-api2/nightly"]
nightly_core_intrinsics = []
nightly = [
    "nightly_allocator_api",
    "nightly_core_intrinsics",
]
# required features to run tests; additional features enable more tests
dev = ["std"]

[dependencies]
allocator-api2 = { version = "0.2", default-features = false }
cfg-if = "1.0"
mirai-annotations = "1.12"
thiserror = { version = "2", default-features = false }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["mm", "param"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_SystemInformation", "Win32_System_Memory"] }

[profile.release]
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mirai)'] }
